# DataclassesInPython

./: LICENSE  README.md  pyproject.toml
src/: immutability.py  inheritance.py
src/dataclasses/: boilerplate.py  comparison.py  default_factory.py  field_customization.py
src/pydantic/: validators.py
