[tool.poetry]
name = "dataclassesinpython"
version = "0.1.0"
description = ""
authors = ["Rahul  Bhatia <rahul1990bhatia@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
